# Graph_and_data_structures

./: .gitignore  CLAUDE.md  CMakeList.txt  CMakeLists.txt  README.md  graph.cpp  main.cpp  node_n_pointers.c
.claude/agents/: build-verifier.md  disk-format-engineer.md  docs-scribe.md  graph-engine.md  odt-translator.md
.claude/skills/docs-keeper/: SKILL.md
data_tructures/: map_hash_table.c  map_hash_table.h
db/: nodes.idx
docs/: README.md  ROADMAP.md  STANDARD.md
docs/architecture/: overview.md
docs/legacy/: api_changes.md  design_decisions.md  known_bugs.md
docs/modules/: data_structures.md  db.md  graph_core.md
docs/temp/: USER_ACTIVITY.md
graph_core/: costants.h  graph.cpp  graph.h  logger.h
graph_core/io/: graph_io.cpp  graph_io.h  io_utils.cpp  io_utils.h
graph_core/odt/: edge_odt.cpp  edge_odt.h  node_odt.cpp  node_odt.h
graph_core/struct/: domain_struct.h  functions_policies.h  pod_struct.h  type_registry.cpp  type_registry.h
